--- a/src/app.html
+++ b/src/app.html
@@ -4,8 +4,11 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		<title>Garments Production Planning Board</title>
+		<!-- Load Tailwind CSS -->
+		<script src="https://cdn.tailwindcss.com"></script>
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body class="bg-gray-100 antialiased" data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
